--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <ul class="links">
                     <li><a href="https://bsky.app/profile/rech.ing">Bluesky</a></li>
                     <li><a href="https://www.youtube.com/channel/UC1XfiEPwbToTvldILJ8sKKA">YouTube</a></li>
+                    <li><a href="https://en.pronouns.page/@rech.ing">pronouns.page</a></li>
                     <li>Discord: rech.ing</li>
                 </ul>
                 
